Blackpurl/src/objects/Fusion_Report_Line_Item__c.object
<CustomObject>
    <description>FUSION BENCHMARKING LINE ITEM DETAILS used for reporting</description>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HDNet_Account__c</fullName>
        <description>Account Name</description>
        <label>HDNet Account</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Map_Action__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Map Action</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Monthly_Value__c</fullName>
        <label>Monthly Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Order_Number__c</fullName>
        <label>Order Number</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Quickbooks</fullName>
                </value>
                <value>
                    <fullName>User entered</fullName>
                </value>
                <value>
                    <fullName>Blackpurl</fullName>
                </value>
                <value>
                    <fullName>Calculated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Yearly_Value__c</fullName>
        <label>Yearly Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Fusion Report Line Item</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>HDNet_Account__c</columns>
        <columns>Order_Number__c</columns>
        <columns>Description__c</columns>
        <columns>Monthly_Value__c</columns>
        <columns>Yearly_Value__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>BP_related_line_items</fullName>
        <columns>NAME</columns>
        <columns>HDNet_Account__c</columns>
        <columns>Order_Number__c</columns>
        <columns>Description__c</columns>
        <columns>Monthly_Value__c</columns>
        <columns>Yearly_Value__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Source__c</field>
            <operation>equals</operation>
            <value>Blackpurl</value>
        </filters>
        <label>BP related line items</label>
    </listViews>
    <listViews>
        <fullName>Calculated_line_items</fullName>
        <columns>NAME</columns>
        <columns>HDNet_Account__c</columns>
        <columns>Order_Number__c</columns>
        <columns>Description__c</columns>
        <columns>Monthly_Value__c</columns>
        <columns>Yearly_Value__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Source__c</field>
            <operation>equals</operation>
            <value>Calculated</value>
        </filters>
        <label>Calculated line items</label>
    </listViews>
    <listViews>
        <fullName>QB_related_line_items</fullName>
        <columns>NAME</columns>
        <columns>HDNet_Account__c</columns>
        <columns>Order_Number__c</columns>
        <columns>Description__c</columns>
        <columns>Monthly_Value__c</columns>
        <columns>Yearly_Value__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Source__c</field>
            <operation>equals</operation>
            <value>Quickbooks</value>
        </filters>
        <label>QB related line items</label>
    </listViews>
    <nameField>
        <displayFormat>FLI-{00000000}</displayFormat>
        <label>Fusion Report Line Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fusion Report Line Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>